# IUTProject

./: .gitignore  README.md
WindowsDriverInstall/: setup.SED  setup.bat  unzip.vbs
WindowsDriverInstall/driver/: VTPlayer.cat  VTPlayer.inf
driver/: CMakeLists.txt
driver/driver/: CMakeLists.txt  vtplayer.c
driver/driver/.tmp_versions/: vtplayer.mod
driver/lib/: CMakeLists.txt  gettimeofday.h  libJNI.c  libusb_dyn.c  libvtplayer.h  vtp_test.c
driver_compilation/driver/: Kbuild  Makefile  vtpServer.c  vtplayer.h
driver_compilation/lib/: control_request.h  gettimeofday.c  libJNI.c  libJNI.h  libvtplayer-thread.c  libvtplayer-thread.h  libvtplayer.c  mutex.c  mutex.h  usb.h  vtp_test_thread.c
src/config/: Config.java  ConfigTest.java
src/credit/: Credit.java
src/menu/: Menu.java  MenuAction.java  MenuBarre.java  MenuBarreControleur.java  MenuControleur.java  Test.java
src/parametres/: Config.java  KeyInput.java  Parametres.form  Parametres.java  ParametresModele.java  ParametresVue.form  ParametresVue.java  Test.java
src/schema/: ActionCommande.java  GestionaireFichier.java  MenuControleur.java  Picture.java  SchemaAction.java  SchemaControleur.java  SchemaControleurInterface.java  SchemaMenu.java  SchemaVue.java  Test.java
src/schema/creation/: BarreOutil.java  CreationAction.java  CreationVue.java  PictureCreation.java  SchemaCreationBarreAction.java  SchemaCreationControleur.java  SchemaCreationVue.java  Test.java
src/schema/creation/old/: BarreOutil.java  CreationVue.java  PictureCreation.java  SchemaCreationControleur.java  SchemaCreationVue.java  Test.java
src/schemaV2/: ShemaVue.java
src/schemaV2/porte/: And.java  Nand.java  Porte.java  Porte_2E_1S.java
src/vipMouse/: Application.java
src/vocal/: LecteurTexteThread.java  SpeakToMe.java  Test.java
src/vtplayer/: ByteUtilitaire.java  Test.java  VTPlayerException.java  VTPlayerImpl.java  VTPlayerInterface.java  VTPlayerManager.java
src/vtplayer/linux/: VTPlayer.java
src/vtplayer/parametreur/: Parametreur.java  ParametreurControleur.java  ParametreurGridVue.java  ParametreurModele.java  ParametreurVue.java  Test.java
src/vtplayer/windows/: Test.java  VTPlayer.java
wd/: cercle.txt  parametre.ini  text.txt
wd/config/: default.conf  default.ini  description.conf  description.ini  parametre.ini  phonetique.conf
wd/donnees/: credit.html
wd/donnees/pho_wav/: phrase.pho
wd/help/chm/: Unik Sound Tactil Display.chm
wd/help/html/: CircuitsLogiques.html  Edition.html  Installation.html  Introduction.html  Menu.html  Miseenroute.html  Nomenclature.html  OuvrirCrer.html  Sommaire.html  Unik Sound Tactil Display.html  toc.html
wd/help/html/css/: hnd.css
wd/help/html/js/: searchdata.js
wd/save/: cercle.ustd  demo1.ustd  demo2.ustd  schema.ustd  test.save  test3.save
